# Britespeck-Engine

./: .env  Cargo.toml  Dockerfile  alpha.rs  endpoints.rs  ev_engine.rs  get_unified_events  kalshi_key.pem  kalshi_public.pem  main_v2.rs  main_v3.rs  pyproject.toml
.github/workflows/: CI.yml
src/: alpha.rs  endpoints.rs  ev_engine.rs  fetcher.rs  indicators.rs  main.rs  market_history.rs  models.rs  orderbook.rs  strategy.rs  trades.rs  user_bots.rs
src/fetchers/: kalshi_ws.rs  mod.rs  orderbook.rs  polymarket_clob.rs
