[package]
name = "britespeck_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Core Logic
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication (NEW - Needed for Polymarket)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"

# Scraping
reqwest = { version = "0.11", features = ["cookies", "json"] }
regex = "1.12.3"
urlencoding = "2"