[package]
name = "britespeck_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Core Logic
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication (Polymarket HMAC + Kalshi RSA-PSS signing)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
rsa = { version = "0.9", features = ["sha2", "pem"] }
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem"] }
pkcs1 = { version = "0.7", features = ["pem"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"

# HTTP / WebSocket
reqwest = { version = "0.11", features = ["cookies", "json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
async-trait = "0.1"

# Misc
regex = "1.12.3"
urlencoding = "2"
